--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,4 +1,6 @@
 
+@import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Dancing+Script:wght@400..700&family=Kaushan+Script&family=Oswald:wght@200..700&family=Playwrite+AU+SA+Guides&display=swap");
+
 * {
   margin: 0;
   padding: 0;
