--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Dancing+Script:wght@400..700&family=Kaushan+Script&family=Oswald:wght@200..700&family=Playwrite+AU+SA+Guides&display=swap");
 
 * {
@@ -12,4 +11,13 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   text-align: center;
+}
+
+a,
+.signuplbl {
+  text-decoration: none;
+  color: rgb(50, 50, 50);
+}
+a:hover {
+  color: red;
 }
