--- a/Styles/index.css
+++ b/Styles/index.css
@@ -21,3 +21,11 @@ a,
 a:hover {
   color: red;
 }
+
+.index-container {
+    background-color: rgba(255, 255, 255, 0.6);
+    margin: 15% auto;
+    width: 40%;
+    border-radius: 100px;
+    padding: 50px;
+  }
