--- a/Styles/index.css
+++ b/Styles/index.css
@@ -63,3 +63,17 @@ table {
 .align-right{
     text-align: right;
 }
+
+/* .align-center{
+    text-align: center;
+} */
+button {
+    margin-top: 30PX;
+    padding: 5px 30px;
+    border: 5px double white;
+    border-radius: 20px;
+    background-color: blueviolet;
+    font-weight: bolder;
+    font-size: 30px;
+    cursor: pointer;
+}
