--- a/Styles/home.css
+++ b/Styles/home.css
@@ -18,3 +18,12 @@
   .top {
     font-size: 22px;
 }
+
+.highlight,
+h2 {
+  color: white;
+  font-family: "Kaushan Script", cursive;
+  font-weight: 800;
+  font-style: normal;
+  text-shadow: -1px -1px 0 red, 1px -1px 0 red, -1px 1px 0 red, 1px 1px 0 red;
+}
