--- a/Styles/home.css
+++ b/Styles/home.css
@@ -27,3 +27,10 @@ h2 {
   font-style: normal;
   text-shadow: -1px -1px 0 red, 1px -1px 0 red, -1px 1px 0 red, 1px 1px 0 red;
 }
+
+.flex {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: center;
+  }
