--- a/Styles/home.css
+++ b/Styles/home.css
@@ -34,3 +34,11 @@ h2 {
     justify-content: space-evenly;
     align-content: center;
   }
+
+  section {
+    margin: 60px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: black;
+  }
