--- a/Styles/home.css
+++ b/Styles/home.css
@@ -42,3 +42,14 @@ h2 {
     background-color: rgba(255, 255, 255, 0.6);
     color: black;
   }
+
+  button {
+    margin-top: 30px;
+    padding: 5px 30px;
+    border: 5px double white;
+    border-radius: 20px;
+    background-color: blueviolet;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+  }
