Make <> responsive web design using media queries

--- a/Styles/home.css
+++ b/Styles/home.css
@@ -58,3 +58,12 @@ h2 {
     color: red;
     text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
 }
+
+
+/* ################################   Make Responsive Web Design-Media Queries   ################################*/
+
+@media (max-width: 830px){
+    .top, body, h1 {
+      font-size: 20px;
+    }
+  }
