--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -12,3 +12,16 @@
     color: rgb(1, 1, 63);
     font-size: 20px;
   }
+
+  header {
+    background-color: rgb(1, 1, 63);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    z-index: 1000;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom: 10px double blueviolet;
+  }
