--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -25,3 +25,15 @@
     border-bottom-right-radius: 50%;
     border-bottom: 10px double blueviolet;
   }
+
+  footer {
+    background-color: rgb(1, 1, 63);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-top: 10px double blueviolet;
+  }
