--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -43,3 +43,10 @@
     padding: 40px;
     margin: auto;
   }
+
+  .flex {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-content: center;
+  }
