--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -50,3 +50,11 @@
     justify-content: space-evenly;
     align-content: center;
   }
+
+  .flex button {
+    padding: 5px 10px;
+    margin: 5px;
+    border-radius: 5px;
+    border: 3px solid rgb(1, 1, 63);
+    width: 300px;
+  }
