--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -58,3 +58,12 @@
     border: 3px solid rgb(1, 1, 63);
     width: 300px;
   }
+
+  .qu-container {
+    background-color: rgba(255, 255, 255, 0.6);
+    margin: 50px auto;
+    width: 50%;
+    border-radius: 50px;
+    border: 5px double rgb(1, 1, 63);
+    padding: 20px 50px;
+  }
