--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -67,3 +67,19 @@
     border: 5px double rgb(1, 1, 63);
     padding: 20px 50px;
   }
+
+  .submit {
+    margin-top: 30px;
+    padding: 5px 30px;
+    border: 5px double rgb(1, 1, 63);
+    border-radius: 20px;
+    background-color: white;
+    color: blueviolet;
+    font-weight: bolder;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
+  .submit:hover {
+    color: red;
+  }
