--- a/Styles/dashboard.css
+++ b/Styles/dashboard.css
@@ -18,3 +18,13 @@
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
     1px 1px 0 black;
 }
+
+main {
+    background-color: rgba(255, 255, 255, 0.6);
+    border: 5px double rgb(1, 1, 63);
+  /* margin: auto; */
+  width: 80%;
+  border-radius: 100px;
+  padding: 50px;
+  margin: 50px auto;
+}
