--- a/Styles/dashboard.css
+++ b/Styles/dashboard.css
@@ -36,3 +36,16 @@ table {
     background-color: white;
     color: rgb(1, 1, 63);
   }
+
+  th, td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  th {
+      border: 3px solid darkmagenta;
+    background-color: rgb(1, 1, 63);
+    color: white;
+    font-size: 20px;
+  }
